Ensures the "return" hidden mark and the last word wrap as a group.

--- a/jekyll-site-src/_css_src/components/_hidden-mark.scss
+++ b/jekyll-site-src/_css_src/components/_hidden-mark.scss
@@ -1,12 +1,17 @@
 .hidden-mark {
   display: inline-block;
-  color: #9b9b9b;
+  white-space: nowrap;
+
+  &::before,
+  &::after {
+    color: #9b9b9b;
+  }
 
   &--dot::before {
     content: '•';
   }
 
-  &--return::before {
+  &--return::after {
     content: '¬';
   }
 }
